--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,125 @@
-body{
-    background: red;
+h1 {
+    display: block;
+    font-size: 3em;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+    text-align: center;
 }
 
-.crystal{
+p {
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+body {
+    background: url("../images/background.jpg") no-repeat;
+    background-size: auto;
+    background-position: center;
+    width: auto;
+    height: auto;
+    font-family: 'Libre Baskerville', serif;
+    text-align: center;
+}
+
+.gridContainer {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    grid-gap: 5em;
+    margin: auto;
+    justify-content: center;
+}
+
+.content {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.inner {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+
+    /* .instructions {
+        grid-area: 1 / 1 / 3 / 6;
+    }
+
+    .randomNumber {
+        grid-area: 3 / 1 / 4 / 3;
+    }
+
+    .score {
+        grid-area: 3 / 3 / 4 / 5;
+    }
+
+    .crystal {
+        grid-area: 4 / 1 / 5 / 5;
+    }
+
+    .wins {
+        grid-area: 5 / 1 / 6 / 3;
+    }
+
+    .losses {
+        grid-area: 5 / 3 / 6 / 5;
+    } */
+}
+
+.instructions {
+    grid-area: 1 / 1 / 3 / 6;
+    text-align: start;
+    width: 30vw;
+    justify-self: center;
+}
+
+.randomNumber {
+    font-size: 200%;
+    grid-area: 3 / 1 / 4 / 3;
+}
+
+#randomNumber {
+    font-size: 150%;
+    margin-top: .5em;
+    margin-bottom: .5em;
+}
+
+.score {
+    font-size: 200%;
+    grid-area: 3 / 3 / 4 / 5;
+}
+
+#score {
+    font-size: 150%;
+    margin-top: .5em;
+    margin-bottom: .5em;
+}
+
+.wins {
+    font-size: 125%;
+    grid-area: 5 / 1 / 6 / 3;
+    text-align: end;
+}
+
+.losses {
+    font-size: 125%;
+    grid-area: 5 / 3 / 6 / 5;
+    text-align: start;
+}
+
+.crystalContainer{
+    grid-area: 4 / 1 / 5 / 5;
+    justify-content: center;
+}
+
+.crystal {
     width: 100px;
     height: 120px;
     background: url("../images/crystals.png") no-repeat;
@@ -10,18 +127,18 @@ body{
     display: inline-block;
 }
 
-#crystal1{
+#crystal1 {
     background-position: 0 0;
 }
 
-#crystal2{
+#crystal2 {
     background-position: -100px 0;
 }
 
-#crystal3{
+#crystal3 {
     background-position: -200px 0;
 }
 
-#crystal4{
+#crystal4 {
     background-position: 0 -120px;
 }
